<resources>
    <string name="app_name">Crypto Portfolio</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_login">Please login</string>
    <string name="title_activity_main">Crypto Portfolio</string>

    <string name="selected_coin">Selected Coin</string>
    <string name="current_price">Current Price: </string>
    <string name="quantity_held">Quantity Held: </string>
    <string name="holding_value">Holding Value: </string>
    <string name="your_cost">Your Cost: </string>
    <string name="coin">Coin</string>
    <string name="settings">Settings</string>
    <string name="total_cost">Total Cost: </string>
    <string name="total_value">Total Value: </string>
    <string name="total_change">Percent Change: </string>
    <string name="total_portfolio_holdings">TOTAL PORTFOLIO HOLDINGS</string>

    <string name="coin_news_text">%s NEWS</string>
    <string name="increase_decrease_text">%s :</string>
    <string name="news_image_desc">News Image</string>
    <string name="news_image">news image</string>
    <string name="str_test_date">22/02/2017</string>
    <string name="no_news">No News</string>
    <string name="news_error_text">There was an error loading the news. Please try again later.</string>

    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_work">Work</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_username">Please enter a valid username.</string>
    <string name="enter_password">Please enter a valid password.</string>
    <string name="enter_email">Please enter a valid email.</string>
    <string name="login_server_error">There was a server error with those login values. Please try again.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account. Login.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="reset_password_text">You will receive an email with a temporary password.</string>
    <string name="error_while_loading_data">An error occurred while loading data</string>
    <string name="no_holdings_yet">It does not look like you have any holdings yet. Please click the + button to add.</string>
    <string name="asteriskred"><font color='#cc0029'>*</font></string>
    <string name="add_holding">Add Holding</string>
    <string name="choose_coin_to_add">Choose a coin to add</string>
    <string name="go_to_add_coin_view">Go to add a coin view</string>

    <string name="cmc_rank_text">%s</string>
    <string name="search">Search</string>

    <string name="you_have_this_coin">You currently have %s in your holdings.</string>
    <string name="quantity_held_add_form">Quantity Held : %s</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost Per Coin</string>
    <string name="holding_value_add_form">Holding Value : %s</string>

    <string name="add_form_current_price">Current Price: %s</string>
    <string name="enter_quantity">Please enter a quantity</string>
    <string name="enter_cost">Please enter a cost per coin</string>



</resources>
