<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="cryptoValue"
            type="com.imtmobileapps.cryptoportfolio.model.CryptoValue" />

        <variable
            name="listener"
            type="com.imtmobileapps.cryptoportfolio.view.CoinClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:onClick="@{listener::onCoinClicked}"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_weight=".1"
            android:contentDescription="@string/coin"
            android:imageUrl="@{cryptoValue.coin.smallCoinImageUrl}"
            android:padding="4dp"
            android:scaleType="fitStart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.4
"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{cryptoValue.coin.coinName}"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coin_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{cryptoValue.coin.coinSymbol}" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holding_value" />

            <TextView
                android:id="@+id/holdingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{cryptoValue.holdingValue}"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.6"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{cryptoValue.coin.currentPrice.toString()}"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</layout>
