<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="cryptoItemHeader"
            type="com.imtmobileapps.cryptoportfolio.model.CryptoValue" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/symbolImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/selected_coin"
            android:imageUrl="@{cryptoItemHeader.coin.smallCoinImageUrl}"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/coinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center|center_horizontal"
            android:text="@{cryptoItemHeader.coin.coinName}"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/coinSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:gravity="end"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@{cryptoItemHeader.coin.coinSymbol}"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/currentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coinSymbol"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:text="@string/current_price" />


        <TextView
            android:id="@+id/currentPriceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coinSymbol"
            android:layout_toRightOf="@+id/currentPrice"
            android:layout_toEndOf="@+id/currentPrice"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@{cryptoItemHeader.coin.currentPrice.toString()}"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quantityHeld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentPrice"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:text="@string/quantity_held" />


        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentPrice"
            android:layout_toRightOf="@+id/quantityHeld"
            android:layout_toEndOf="@+id/quantityHeld"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@{String.valueOf(cryptoItemHeader.quantity)}"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/holdingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityHeld"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:text="@string/holding_value" />


        <TextView
            android:id="@+id/holdingValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityHeld"
            android:layout_toRightOf="@+id/holdingText"
            android:layout_toEndOf="@+id/holdingText"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@{cryptoItemHeader.holdingValue}"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/costText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/holdingText"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:text="@string/your_cost" />


        <TextView
            android:id="@+id/costValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/holdingText"
            android:layout_toRightOf="@+id/costText"
            android:layout_toEndOf="@+id/costText"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@{cryptoItemHeader.cost}"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/increaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costText"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:text="@{@string/increase_decrease_text(cryptoItemHeader.increaseDecrease)}" />


        <TextView
            android:id="@+id/percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costText"
            android:layout_toRightOf="@+id/increaseText"
            android:layout_toEndOf="@+id/increaseText"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@{cryptoItemHeader.percentage}"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/percentage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>


    </RelativeLayout>


</layout>